# test-mailbox

./: .env.example  Dockerfile  README.md  core.py  db.py  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt  run.py  server.py  smtp_server.py
mcp_server_testmailbox.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
