[project]
name = "mcp-server-testmailbox"
version = "1.0.0"
description = "Disposable email inbox service for testing — REST API + MCP server"
requires-python = ">=3.11"
dependencies = [
    "aiosmtpd>=1.4.6",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "mcp[cli]>=1.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
testmailbox = "run:main"
testmailbox-mcp = "mcp_server:main"

[tool.setuptools]
py-modules = ["core", "db", "mcp_server", "run", "server", "smtp_server"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
